Chapter 3 — Listing 3.6: ComparatorDefaultMethods.java Demonstrates: Comparator.thenComparing as a default method enabling chained